--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^1.0.1",
+    "pryjs": "^1.0.3",
     "sinon": "^7.3.1"
   }
 }
